--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,6 @@
 	<modules>
 		<module>corejava_v1_ch02</module>
     <module>corejava_v1_ch03</module>
+    <module>corejava_v1_ch12</module>
   </modules>
 </project>
