--- a/pom.xml
+++ b/pom.xml
@@ -42,5 +42,6 @@
 		<module>corejava_v1_ch02</module>
     <module>corejava_v1_ch03</module>
     <module>corejava_v1_ch12</module>
-  </modules>
+        <module>corejava_v1_ch04</module>
+    </modules>
 </project>
