--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,6 @@
     <module>corejava_v1_ch12</module>
         <module>corejava_v1_ch04</module>
         <module>corejava_v1_ch05</module>
+        <module>corejava_v1_ch06</module>
     </modules>
 </project>
