--- a/corejava_v1_ch05/pom.xml
+++ b/corejava_v1_ch05/pom.xml
@@ -4,13 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>corejava_base</artifactId>
         <groupId>com.corejava</groupId>
+        <artifactId>corejava_base</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>corejava_v1_ch05</artifactId>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>${parent.groupId}</groupId>
+            <artifactId>corejava_v1_ch06</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
