add corejava_v1_ch13 project -- Collections

--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,6 @@
         <module>corejava_v1_ch05</module>
         <module>corejava_v1_ch06</module>
         <module>corejava_v1_ch11</module>
+        <module>corejava_v1_ch13</module>
     </modules>
 </project>
